--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "framer-motion": "^11.13.5",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
+    "next-mdx-remote": "^5.0.0",
     "nextra": "^3.2.5",
     "nextra-theme-docs": "^3.2.5",
     "react": "^19.0.0",
