--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.4",
     "nextra": "^3.2.5",
     "nextra-theme-docs": "^3.2.5",
     "react": "^19.0.0",
