--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
-    "@types/node": "22.10.2",
+    "@types/node": "^22.10.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "postcss": "^8.4.49",
