--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.14.0",
     "react-rain-animation": "^1.0.4",
-    "react-snowfall": "^2.2.0",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
@@ -42,9 +41,12 @@
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
     "@types/node": "^22.10.7",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "typescript": "5.9.3"
   }
 }
